# pokemon-alternative-metas

./: .gitignore  docker-compose.yml
pam-backend/: .gitignore  Cargo.toml  draft_points_csv_to_json.py
pam-backend/data/: pokedex.json
pam-backend/data/arena/: config.json  exceptions.json
pam-backend/migrations/: 20251206185127_create_initial_tables.sql  20251211195117_add_bucket_to_arena_teams.sql  20251211195958_change_bucket_type.sql  20251211212038_add_foreign_keys.sql  20260115230331_add_finished_draft_arena_runs.sql  20260117124606_add_bucket_col_arena_picks.sql  20260117153846_add_run_id_arena_picks.sql  20260117155055_alter_pkey_arena_picks.sql  20260117161805_remove_bucket_default_value_arena_picks.sql  20260117182123_remove_username_arena_picks.sql  20260117182723_remove_username_arena_teams.sql  20260120124812_change_timestamp_type.sql  20260120201303_remove_gxe_glicko1_coil.sql  20260304094724_add_arena_matches.sql  20260304102517_alter_arena_matches.sql  20260419182618_change_leaderboards.sql
pam-backend/src/: db.rs  main.rs
pam-backend/src/adapters/: mod.rs
pam-backend/src/adapters/http/: app_state.rs  error.rs
pam-backend/src/adapters/persistence/: arena.rs  mod.rs
pam-backend/src/adapters/repositories/: mod.rs
pam-backend/src/application/: mod.rs
pam-backend/src/application/repositories/: arena.rs  matchmaking.rs  mod.rs  pokemon.rs
pam-backend/src/application/services/: matchmaking.rs  mod.rs
pam-backend/src/application/use_cases/: arena.rs
pam-backend/src/data/: mod.rs
pam-backend/src/data/arena/: config.json  draft_points.csv  draft_points.json
pam-backend/src/domain/: arena.rs  mod.rs  pokemon.rs  time.rs
pam-backend/src/domain/arena/: arena_match.rs  mod.rs  pick.rs  run.rs
pam-backend/src/infra/: app.rs  db.rs  mod.rs
pam-backend/src/infra/setup/: arena.rs  mod.rs  pokedex.rs
pam-backend/src/metas/: mod.rs  models.rs
pam-backend/src/metas/arena/: mod.rs  models.rs  (+2 more)
pam-backend/src/startup/: app.rs  arena.rs  database.rs  matchmaking.rs  mod.rs  paths.rs
(+43 files in other folders)
