[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
dotenvy = "0.15.7"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", features = ["chrono_0_4"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "time"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.19.0"
